--- a/index.html
+++ b/index.html
@@ -23,19 +23,33 @@
                 <a class="logo hover-color" href="./index.html"><span class="blue-text">Web</span>Studio</a>
 
                 <ul class="pages list">
-                    <li class="page"><a class="nav-link hover-color current" href="./index.html">Студия</a></li>
+                    <li class="page"><a class="nav-link hover-color current" href="../webStudio.html">Студия</a></li>
                     <li class="page"><a class="nav-link hover-color" href="./portfolio.html">Портфолио</a></li>
-                    <li class="page"><a class="nav-link hover-color" href="">Контакты</a></li>
+                    <li class="page"><a class="nav-link hover-color" href="./contacts.html">Контакты</a></li>
                 </ul>
 
             </nav>
             <ul class="contacts list">
                 <li class="contact">
-                    <a class="contact-link hover-color" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="contact-link hover-color" href="mailto:info@devstudio.com">
+                        <div class="contact-section">
+                            <svg class="contact-icon icon" width="16px" height="12px">
+                                <use href="./images/svg/symbol-defs.svg#mail"></use>
+                            </svg>
+                            info@devstudio.com
+                        </div>
+                    </a>
                 </li>
 
                 <li class="contact">
-                    <a class="contact-link hover-color" href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a class="contact-link hover-color" href="tel:+380961111111">
+                        <div class="contact-section">
+                            <svg class="contact-icon icon" width="10px" height="16px">
+                                <use href="./images/svg/symbol-defs.svg#smartphone"></use>
+                            </svg>
+                            +38 096 111 11 11
+                        </div>
+                    </a>
                 </li>
             </ul>
         </div>
