--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <a class="logo hover-color" href="./index.html"><span class="blue-text">Web</span>Studio</a>
 
                 <ul class="pages list">
-                    <li class="page"><a class="nav-link hover-color current" href="../webStudio.html">Студия</a></li>
+                    <li class="page"><a class="nav-link hover-color current" href="./index.html">Студия</a></li>
                     <li class="page"><a class="nav-link hover-color" href="./portfolio.html">Портфолио</a></li>
-                    <li class="page"><a class="nav-link hover-color" href="./contacts.html">Контакты</a></li>
+                    <li class="page"><a class="nav-link hover-color" href="">Контакты</a></li>
                 </ul>
 
             </nav>
@@ -121,6 +121,50 @@
                         <div class="teammate-info">
                             <h3 class="teammate-title">Игорь Демьяненко</h3>
                             <p class="profession">Product Designer</p>
+                            <div class="teammate-join">
+                                <ul class="teammate-join-list list">
+                                    <li class="teammate-join-item">
+                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                            <div class="join-icon">
+                                                <svg class="join-icon" width="20" height="20">
+                                                    <use href="./images/svg/symbol-defs.svg#instagram"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="teammate-join-item">
+                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                            <div class="join-icon">
+                                                <svg class="join-icon" width="20" height="20">
+                                                    <use href="./images/svg/symbol-defs.svg#twitter"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="teammate-join-item">
+                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                            <div class="join-icon">
+                                                <svg class="join-icon" width="20" height="20">
+                                                    <use href="./images/svg/symbol-defs.svg#facebook"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="teammate-join-item">
+                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                            <div class="join-icon">
+                                                <svg class="join-icon" width="20" height="20">
+                                                    <use href="./images/svg/symbol-defs.svg#linkedin"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </li>
 
@@ -129,6 +173,50 @@
                         <div class="teammate-info">
                             <h3 class="teammate-title">Ольга Репина</h3>
                             <p class="profession">Frontend Developer</p>
+                            <div class="teammate-join">
+                                <ul class="teammate-join-list list">
+                                    <li class="teammate-join-item">
+                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                            <div class="join-icon">
+                                                <svg class="join-icon" width="20" height="20">
+                                                    <use href="./images/svg/symbol-defs.svg#instagram"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="teammate-join-item">
+                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                            <div class="join-icon">
+                                                <svg class="join-icon" width="20" height="20">
+                                                    <use href="./images/svg/symbol-defs.svg#twitter"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="teammate-join-item">
+                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                            <div class="join-icon">
+                                                <svg class="join-icon" width="20" height="20">
+                                                    <use href="./images/svg/symbol-defs.svg#facebook"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="teammate-join-item">
+                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                            <div class="join-icon">
+                                                <svg class="join-icon" width="20" height="20">
+                                                    <use href="./images/svg/symbol-defs.svg#linkedin"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </li>
 
@@ -137,6 +225,50 @@
                         <div class="teammate-info">
                             <h3 class="teammate-title">Николай Тарасов</h3>
                             <p class="profession">Marketing</p>
+                            <div class="teammate-join">
+                                <ul class="teammate-join-list list">
+                                    <li class="teammate-join-item">
+                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                            <div class="join-icon">
+                                                <svg class="join-icon" width="20" height="20">
+                                                    <use href="./images/svg/symbol-defs.svg#instagram"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="teammate-join-item">
+                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                            <div class="join-icon">
+                                                <svg class="join-icon" width="20" height="20">
+                                                    <use href="./images/svg/symbol-defs.svg#twitter"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="teammate-join-item">
+                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                            <div class="join-icon">
+                                                <svg class="join-icon" width="20" height="20">
+                                                    <use href="./images/svg/symbol-defs.svg#facebook"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="teammate-join-item">
+                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                            <div class="join-icon">
+                                                <svg class="join-icon" width="20" height="20">
+                                                    <use href="./images/svg/symbol-defs.svg#linkedin"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </li>
 
@@ -145,6 +277,50 @@
                         <div class="teammate-info">
                             <h3 class="teammate-title">Михаил Ермаков</h3>
                             <p class="profession">UI Designer</p>
+                            <div class="teammate-join">
+                                <ul class="teammate-join-list list">
+                                    <li class="teammate-join-item">
+                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                            <div class="join-icon">
+                                                <svg class="join-icon" width="20" height="20">
+                                                    <use href="./images/svg/symbol-defs.svg#instagram"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="teammate-join-item">
+                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                            <div class="join-icon">
+                                                <svg class="join-icon" width="20" height="20">
+                                                    <use href="./images/svg/symbol-defs.svg#twitter"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="teammate-join-item">
+                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                            <div class="join-icon">
+                                                <svg class="join-icon" width="20" height="20">
+                                                    <use href="./images/svg/symbol-defs.svg#facebook"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="teammate-join-item">
+                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                            <div class="join-icon">
+                                                <svg class="join-icon" width="20" height="20">
+                                                    <use href="./images/svg/symbol-defs.svg#linkedin"></use>
+                                                </svg>
+                                            </div>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </li>
                 </ul>
@@ -154,21 +330,69 @@
 
     <!-- Подвал -->
     <footer>
-        <div class="container">
-            <a class="footer-logo hover-color" href="./index.html"><span class="blue-text">Web</span>Studio</a>
-            <address>
-                <ul class="address-list list">
-                    <li class="address"><a class="footer-address hover-color"
-                            href="https://goo.gl/maps/xgKNqcMdcs3EZ4Po8" target="_blank" rel="noopener noreferrer">г.
-                            Киев,
-                            пр-т Леси Украинки, 26</a>
+        <div class="container footer">
+            <div class="address-nav">
+                <a class="footer-logo hover-color" href="./index.html"><span class="blue-text">Web</span>Studio</a>
+                <address>
+                    <ul class="address-list list">
+                        <li class="address"><a class="footer-address hover-color"
+                                href="https://goo.gl/maps/xgKNqcMdcs3EZ4Po8" target="_blank"
+                                rel="noopener noreferrer">г.
+                                Киев,
+                                пр-т Леси Украинки, 26</a>
+                        </li>
+                        <li class="address"><a class="footer-mail hover-color"
+                                href="mailto:info@example.com">info@example.com</a></li>
+                        <li class="address"><a class="footer-tel hover-color" href="tel:+380991111111">+38 099 111 11
+                                11</a></li>
+                    </ul>
+                </address>
+            </div>
+
+            <div class="footer-join">
+                <h1 class="join-title">Присоединяйтесь</h1>
+                <ul class="join-list list">
+                    <li class="join-item">
+                        <a class="join-link" type="button" href="https://www.instagram.com/" target="_blank"
+                            rel="noopener noreferrer" class="hover-color">
+                            <div class="join-icon">
+                                <svg class="join-icon" width="20" height="20">
+                                    <use href="./images/svg/symbol-defs.svg#instagram"></use>
+                                </svg>
+                            </div>
+                        </a>
                     </li>
-                    <li class="address"><a class="footer-mail hover-color"
-                            href="mailto:info@example.com">info@example.com</a></li>
-                    <li class="address"><a class="footer-tel hover-color" href="tel:+380991111111">+38 099 111 11
-                            11</a></li>
+                    <li class="join-item">
+                        <a class="join-link" type="button" href="https://twitter.com/" target="_blank"
+                            rel="noopener noreferrer" class="hover-color">
+                            <div class="join-icon">
+                                <svg class="join-icon" width="20" height="20">
+                                    <use href="./images/svg/symbol-defs.svg#twitter"></use>
+                                </svg>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="join-item">
+                        <a class="join-link" type="button" href="https://facebook.com/" target="_blank"
+                            rel="noopener noreferrer" class="hover-color">
+                            <div class="join-icon">
+                                <svg class="join-icon" width="20" height="20">
+                                    <use href="./images/svg/symbol-defs.svg#facebook"></use>
+                                </svg>
+                            </div>
+                        </a </li>
+                    <li class="join-item">
+                        <a class="join-link" type="button" href="https://ua.linkedin.com/" target="_blank"
+                            rel="noopener noreferrer" class="hover-color">
+                            <div class="join-icons">
+                                <svg class="join-icon" width="20" height="20">
+                                    <use href="./images/svg/symbol-defs.svg#linkedin"></use>
+                                </svg>
+                            </div>
+                        </a>
+                    </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
