--- a/index.html
+++ b/index.html
@@ -72,23 +72,43 @@
                 <h2 class="hiden-title">Наши преимущества</h2>
                 <ul class="benefits-list list">
                     <li class="benefit">
+                        <div class="benefits-icons">
+                            <svg class="benefits-icon " width="65.32px" height="70px">
+                                <use href="./images/svg/symbol-defs.svg#anthena"></use>
+                            </svg>
+                        </div>
                         <h3 class="benefits-title">Внимание к деталям</h3>
                         <p class="benefits-description">Идейные соображения, а также начало повседневной работы по
                             формированию позиции.</p>
                     </li>
                     <li class="benefit">
+                        <div class="benefits-icons">
+                            <svg class="benefits-icon " width="70" height="70">
+                                <use href="./images/svg/symbol-defs.svg#clock"></use>
+                            </svg>
+                        </div>
                         <h3 class="benefits-title">Пунктуальность</h3>
                         <p class="benefits-description">Задача организации, в особенности же рамки и место обучения
                             кадров
                             влечет за собой.</p>
                     </li>
                     <li class="benefit">
+                        <div class="benefits-icons">
+                            <svg class="benefits-icon " width="70" height="70">
+                                <use href="./images/svg/symbol-defs.svg#diagram"></use>
+                            </svg>
+                        </div>
                         <h3 class="benefits-title">Планирование</h3>
                         <p class="benefits-description">Равным образом консультация с широким активом в значительной
                             степени
                             обуславливает.</p>
                     </li>
                     <li class="benefit">
+                        <div class="benefits-icons">
+                            <svg class="benefits-icon " width="70" height="70">
+                                <use href="./images/svg/symbol-defs.svg#astronaut"></use>
+                            </svg>
+                        </div>
                         <h3 class="benefits-title">Современные технологии</h3>
                         <p class="benefits-description">Значимость этих проблем настолько очевидна, что реализация
                             плановых
@@ -328,6 +348,60 @@
         </section>
     </main>
 
+    <!-- Клиенты -->
+
+    <section class="section clients">
+        <div class="container">
+            <h2 class="clients-title">Постоянные клиенты</h2>
+            <div class="clients">
+                <ul class="clients-list list">
+                    <li class="client-item">
+                        <a href="" class="client-link">
+                            <svg class="icon " width="41px" height="46.7px">
+                                <use href="./images/svg/symbol-defs.svg#yaco"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-item">
+                        <a href="" class="client-link">
+                            <svg class="icon " width="40px" height="52px">
+                                <use href="./images/svg/symbol-defs.svg#tagline"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-item">
+                        <a href="" class="client-link">
+                            <svg class="icon " width="43.46px" height="41.18px">
+                                <use href="./images/svg/symbol-defs.svg#company"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-item">
+                        <a href="" class="client-link">
+                            <svg class="icon " width="84.44px" height="40.62px">
+                                <use href="./images/svg/symbol-defs.svg#foster "></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-item">
+                        <a href="" class="client-link">
+                            <svg class="icon " width="62.54px" height="45.43px">
+                                <use href="./images/svg/symbol-defs.svg#brand"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-item">
+                        <a href="" class="client-link">
+                            <svg class="icon " width="93.79px" height="43.93px">
+                                <use href="./images/svg/symbol-defs.svg#company-tag"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
     <!-- Подвал -->
     <footer>
         <div class="container footer">
@@ -350,45 +424,37 @@
             </div>
 
             <div class="footer-join">
-                <h1 class="join-title">Присоединяйтесь</h1>
+                <h2 class="join-title">Присоединяйтесь</h2>
                 <ul class="join-list list">
                     <li class="join-item">
                         <a class="join-link" type="button" href="https://www.instagram.com/" target="_blank"
                             rel="noopener noreferrer" class="hover-color">
-                            <div class="join-icon">
-                                <svg class="join-icon" width="20" height="20">
-                                    <use href="./images/svg/symbol-defs.svg#instagram"></use>
-                                </svg>
-                            </div>
+                            <svg class="join-icon" width="20" height="20">
+                                <use href="./images/svg/symbol-defs.svg#instagram"></use>
+                            </svg>
                         </a>
                     </li>
                     <li class="join-item">
                         <a class="join-link" type="button" href="https://twitter.com/" target="_blank"
                             rel="noopener noreferrer" class="hover-color">
-                            <div class="join-icon">
-                                <svg class="join-icon" width="20" height="20">
-                                    <use href="./images/svg/symbol-defs.svg#twitter"></use>
-                                </svg>
-                            </div>
+                            <svg class="join-icon" width="20" height="20">
+                                <use href="./images/svg/symbol-defs.svg#twitter"></use>
+                            </svg>
                         </a>
                     </li>
                     <li class="join-item">
                         <a class="join-link" type="button" href="https://facebook.com/" target="_blank"
                             rel="noopener noreferrer" class="hover-color">
-                            <div class="join-icon">
-                                <svg class="join-icon" width="20" height="20">
-                                    <use href="./images/svg/symbol-defs.svg#facebook"></use>
-                                </svg>
-                            </div>
+                            <svg class="join-icon" width="20" height="20">
+                                <use href="./images/svg/symbol-defs.svg#facebook"></use>
+                            </svg>
                         </a </li>
                     <li class="join-item">
                         <a class="join-link" type="button" href="https://ua.linkedin.com/" target="_blank"
                             rel="noopener noreferrer" class="hover-color">
-                            <div class="join-icons">
-                                <svg class="join-icon" width="20" height="20">
-                                    <use href="./images/svg/symbol-defs.svg#linkedin"></use>
-                                </svg>
-                            </div>
+                            <svg class="join-icon" width="20" height="20">
+                                <use href="./images/svg/symbol-defs.svg#linkedin"></use>
+                            </svg>
                         </a>
                     </li>
                 </ul>
