--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                             <div class="teammate-join">
                                 <ul class="teammate-join-list list">
                                     <li class="teammate-join-item">
-                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
-                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                        <a class="teammate-join-link hover-color" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer">
                                             <div class="join-icon">
                                                 <svg class="join-icon" width="20" height="20">
                                                     <use href="./images/svg/symbol-defs.svg#instagram"></use>
@@ -154,8 +154,8 @@
                                         </a>
                                     </li>
                                     <li class="teammate-join-item">
-                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
-                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                        <a class="teammate-join-link hover-color" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer">
                                             <div class="join-icon">
                                                 <svg class="join-icon" width="20" height="20">
                                                     <use href="./images/svg/symbol-defs.svg#twitter"></use>
@@ -164,8 +164,8 @@
                                         </a>
                                     </li>
                                     <li class="teammate-join-item">
-                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
-                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                        <a class="teammate-join-link hover-color" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer">
                                             <div class="join-icon">
                                                 <svg class="join-icon" width="20" height="20">
                                                     <use href="./images/svg/symbol-defs.svg#facebook"></use>
@@ -174,8 +174,8 @@
                                         </a>
                                     </li>
                                     <li class="teammate-join-item">
-                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
-                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                        <a class="teammate-join-link hover-color" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer">
                                             <div class="join-icon">
                                                 <svg class="join-icon" width="20" height="20">
                                                     <use href="./images/svg/symbol-defs.svg#linkedin"></use>
@@ -196,8 +196,8 @@
                             <div class="teammate-join">
                                 <ul class="teammate-join-list list">
                                     <li class="teammate-join-item">
-                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
-                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                        <a class="teammate-join-link hover-color" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer">
                                             <div class="join-icon">
                                                 <svg class="join-icon" width="20" height="20">
                                                     <use href="./images/svg/symbol-defs.svg#instagram"></use>
@@ -206,8 +206,8 @@
                                         </a>
                                     </li>
                                     <li class="teammate-join-item">
-                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
-                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                        <a class="teammate-join-link hover-color" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer">
                                             <div class="join-icon">
                                                 <svg class="join-icon" width="20" height="20">
                                                     <use href="./images/svg/symbol-defs.svg#twitter"></use>
@@ -216,8 +216,8 @@
                                         </a>
                                     </li>
                                     <li class="teammate-join-item">
-                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
-                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                        <a class="teammate-join-link hover-color" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer">
                                             <div class="join-icon">
                                                 <svg class="join-icon" width="20" height="20">
                                                     <use href="./images/svg/symbol-defs.svg#facebook"></use>
@@ -226,8 +226,8 @@
                                         </a>
                                     </li>
                                     <li class="teammate-join-item">
-                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
-                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                        <a class="teammate-join-link hover-color" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer">
                                             <div class="join-icon">
                                                 <svg class="join-icon" width="20" height="20">
                                                     <use href="./images/svg/symbol-defs.svg#linkedin"></use>
@@ -248,8 +248,8 @@
                             <div class="teammate-join">
                                 <ul class="teammate-join-list list">
                                     <li class="teammate-join-item">
-                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
-                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                        <a class="teammate-join-link hover-color" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer">
                                             <div class="join-icon">
                                                 <svg class="join-icon" width="20" height="20">
                                                     <use href="./images/svg/symbol-defs.svg#instagram"></use>
@@ -258,8 +258,8 @@
                                         </a>
                                     </li>
                                     <li class="teammate-join-item">
-                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
-                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                        <a class="teammate-join-link hover-color" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer">
                                             <div class="join-icon">
                                                 <svg class="join-icon" width="20" height="20">
                                                     <use href="./images/svg/symbol-defs.svg#twitter"></use>
@@ -268,8 +268,8 @@
                                         </a>
                                     </li>
                                     <li class="teammate-join-item">
-                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
-                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                        <a class="teammate-join-link hover-color" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer">
                                             <div class="join-icon">
                                                 <svg class="join-icon" width="20" height="20">
                                                     <use href="./images/svg/symbol-defs.svg#facebook"></use>
@@ -278,8 +278,8 @@
                                         </a>
                                     </li>
                                     <li class="teammate-join-item">
-                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
-                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                        <a class="teammate-join-link hover-color" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer">
                                             <div class="join-icon">
                                                 <svg class="join-icon" width="20" height="20">
                                                     <use href="./images/svg/symbol-defs.svg#linkedin"></use>
@@ -300,8 +300,8 @@
                             <div class="teammate-join">
                                 <ul class="teammate-join-list list">
                                     <li class="teammate-join-item">
-                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
-                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                        <a class="teammate-join-link hover-color" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer">
                                             <div class="join-icon">
                                                 <svg class="join-icon" width="20" height="20">
                                                     <use href="./images/svg/symbol-defs.svg#instagram"></use>
@@ -310,8 +310,8 @@
                                         </a>
                                     </li>
                                     <li class="teammate-join-item">
-                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
-                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                        <a class="teammate-join-link hover-color" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer">
                                             <div class="join-icon">
                                                 <svg class="join-icon" width="20" height="20">
                                                     <use href="./images/svg/symbol-defs.svg#twitter"></use>
@@ -320,8 +320,8 @@
                                         </a>
                                     </li>
                                     <li class="teammate-join-item">
-                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
-                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                        <a class="teammate-join-link hover-color" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer">
                                             <div class="join-icon">
                                                 <svg class="join-icon" width="20" height="20">
                                                     <use href="./images/svg/symbol-defs.svg#facebook"></use>
@@ -330,8 +330,8 @@
                                         </a>
                                     </li>
                                     <li class="teammate-join-item">
-                                        <a class="teammate-join-link" type="button" href="https://www.instagram.com/"
-                                            target="_blank" rel="noopener noreferrer" class="hover-color">
+                                        <a class="teammate-join-link hover-color" href="https://www.instagram.com/"
+                                            target="_blank" rel="noopener noreferrer">
                                             <div class="join-icon">
                                                 <svg class="join-icon" width="20" height="20">
                                                     <use href="./images/svg/symbol-defs.svg#linkedin"></use>
@@ -427,31 +427,32 @@
                 <h2 class="join-title">Присоединяйтесь</h2>
                 <ul class="join-list list">
                     <li class="join-item">
-                        <a class="join-link" type="button" href="https://www.instagram.com/" target="_blank"
-                            rel="noopener noreferrer" class="hover-color">
+                        <a class="join-link hover-color" href="https://www.instagram.com/" target="_blank"
+                            rel="noopener noreferrer">
                             <svg class="join-icon" width="20" height="20">
                                 <use href="./images/svg/symbol-defs.svg#instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="join-item">
-                        <a class="join-link" type="button" href="https://twitter.com/" target="_blank"
-                            rel="noopener noreferrer" class="hover-color">
+                        <a class="join-link hover-color" href="https://twitter.com/" target="_blank"
+                            rel="noopener noreferrer">
                             <svg class="join-icon" width="20" height="20">
                                 <use href="./images/svg/symbol-defs.svg#twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="join-item">
-                        <a class="join-link" type="button" href="https://facebook.com/" target="_blank"
-                            rel="noopener noreferrer" class="hover-color">
+                        <a class="join-link hover-color" href="https://facebook.com/" target="_blank"
+                            rel="noopener noreferrer">
                             <svg class="join-icon" width="20" height="20">
                                 <use href="./images/svg/symbol-defs.svg#facebook"></use>
                             </svg>
-                        </a </li>
+                        </a>
+                    </li>
                     <li class="join-item">
-                        <a class="join-link" type="button" href="https://ua.linkedin.com/" target="_blank"
-                            rel="noopener noreferrer" class="hover-color">
+                        <a class="join-link hover-color" href="https://ua.linkedin.com/" target="_blank"
+                            rel="noopener noreferrer">
                             <svg class="join-icon" width="20" height="20">
                                 <use href="./images/svg/symbol-defs.svg#linkedin"></use>
                             </svg>
