--- a/portfolio.html
+++ b/portfolio.html
@@ -173,31 +173,32 @@
                 <h2 class="join-title">Присоединяйтесь</h2>
                 <ul class="join-list list">
                     <li class="join-item">
-                        <a class="join-link" type="button" href="https://www.instagram.com/" target="_blank"
-                            rel="noopener noreferrer" class="hover-color">
+                        <a class="join-link hover-color" href="https://www.instagram.com/" target="_blank"
+                            rel="noopener noreferrer">
                             <svg class="join-icon" width="20" height="20">
                                 <use href="./images/svg/symbol-defs.svg#instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="join-item">
-                        <a class="join-link" type="button" href="https://twitter.com/" target="_blank"
-                            rel="noopener noreferrer" class="hover-color">
+                        <a class="join-link hover-color" href="https://twitter.com/" target="_blank"
+                            rel="noopener noreferrer">
                             <svg class="join-icon" width="20" height="20">
                                 <use href="./images/svg/symbol-defs.svg#twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="join-item">
-                        <a class="join-link" type="button" href="https://facebook.com/" target="_blank"
-                            rel="noopener noreferrer" class="hover-color">
+                        <a class="join-link hover-color" href="https://facebook.com/" target="_blank"
+                            rel="noopener noreferrer">
                             <svg class="join-icon" width="20" height="20">
                                 <use href="./images/svg/symbol-defs.svg#facebook"></use>
                             </svg>
-                        </a </li>
+                        </a>
+                    </li>
                     <li class="join-item">
-                        <a class="join-link" type="button" href="https://ua.linkedin.com/" target="_blank"
-                            rel="noopener noreferrer" class="hover-color">
+                        <a class="join-link hover-color" href="https://ua.linkedin.com/" target="_blank"
+                            rel="noopener noreferrer">
                             <svg class="join-icon" width="20" height="20">
                                 <use href="./images/svg/symbol-defs.svg#linkedin"></use>
                             </svg>
