--- a/portfolio.html
+++ b/portfolio.html
@@ -72,75 +72,93 @@
                 <!-- примеры -->
                 <ul class="examples-list list">
                     <li class="example-card">
-                        <img class="example-photo" src="./images/portfolio/example1.jpg" width="370"
-                            alt="Ноутбук с изображенеим лавной страницы сайта Технокряк">
-                        <div class="example-info">
-                            <h2 class="example-title">Технокряк</h2>
-                            <p class="project-type">Веб-сайт</p>
-                        </div>
+                        <a class="example-card-link" href="">
+                            <img class="example-photo" src="./images/portfolio/example1.jpg" width="370"
+                                alt="Ноутбук с изображенеим лавной страницы сайта Технокряк">
+                            <div class="example-info">
+                                <h2 class="example-title">Технокряк</h2>
+                                <p class="project-type">Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="example-card">
-                        <img class="example-photo" src="./images/portfolio/example2.jpg" width="370"
-                            alt="Постер New Orlean vs Golden Star">
-                        <div class="example-info">
-                            <h2 class="example-title">Постер New Orlean vs Golden Star</h2>
-                            <p class="project-type">Дизайн</p>
-                        </div>
+                        <a class="example-card-link" href="">
+                            <img class="example-photo" src="./images/portfolio/example2.jpg" width="370"
+                                alt="Постер New Orlean vs Golden Star">
+                            <div class="example-info">
+                                <h2 class="example-title">Постер New Orlean vs Golden Star</h2>
+                                <p class="project-type">Дизайн</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="example-card">
-                        <img class="example-photo" src="./images/portfolio/example3.jpg" width="370"
-                            alt="Логотип ресторана Seafood">
-                        <div class="example-info">
-                            <h2 class="example-title">Ресторан Seafood</h2>
-                            <p class="project-type">Приложение</p>
-                        </div>
+                        <a class="example-card-link" href="">
+                            <img class="example-photo" src="./images/portfolio/example3.jpg" width="370"
+                                alt="Логотип ресторана Seafood">
+                            <div class="example-info">
+                                <h2 class="example-title">Ресторан Seafood</h2>
+                                <p class="project-type">Приложение</p>
+                            </div>
+                        </a>
+                    </li>
+                    <a class="example-card-link" href="">
+                        <li class="example-card">
+                            <img class="example-photo" src="./images/portfolio/example4.jpg" width="370" alt="Наушники">
+                            <div class="example-info">
+                                <h2 class="example-title">Проект Prime</h2>
+                                <p class="project-type">Маркетинг</p>
+                            </div>
+                    </a>
                     </li>
                     <li class="example-card">
-                        <img class="example-photo" src="./images/portfolio/example4.jpg" width="370" alt="Наушники">
-                        <div class="example-info">
-                            <h2 class="example-title">Проект Prime</h2>
-                            <p class="project-type">Маркетинг</p>
-                        </div>
+                        <a class="example-card-link" href="">
+                            <img class="example-photo" src="./images/portfolio/example5.jpg" width="370"
+                                alt="Белая и оранжевая коробки">
+                            <div class="example-info">
+                                <h2 class="example-title">Проект Boxes</h2>
+                                <p class="project-type">Приложение</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="example-card">
-                        <img class="example-photo" src="./images/portfolio/example5.jpg" width="370"
-                            alt="Белая и оранжевая коробки">
-                        <div class="example-info">
-                            <h2 class="example-title">Проект Boxes</h2>
-                            <p class="project-type">Приложение</p>
-                        </div>
+                        <a class="example-card-link" href="">
+                            <img class="example-photo" src="./images/portfolio/example6.jpg" width="370"
+                                alt="Моноблок с изображением главной страницы сайта Inspiration has no Borders">
+                            <div class="example-info">
+                                <h2 class="example-title">Inspiration has no Borders</h2>
+                                <p class="project-type">Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="example-card">
-                        <img class="example-photo" src="./images/portfolio/example6.jpg" width="370"
-                            alt="Моноблок с изображением главной страницы сайта Inspiration has no Borders">
-                        <div class="example-info">
-                            <h2 class="example-title">Inspiration has no Borders</h2>
-                            <p class="project-type">Веб-сайт</p>
-                        </div>
+                        <a class="example-card-link" href="">
+                            <img class="example-photo" src="./images/portfolio/example7.jpg" width="370"
+                                alt="Журнал Limited Edition">
+                            <div class="example-info">
+                                <h2 class="example-title">Издание Limited Edition</h2>
+                                <p class="project-type">Дизайн</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="example-card">
-                        <img class="example-photo" src="./images/portfolio/example7.jpg" width="370"
-                            alt="Журнал Limited Edition">
-                        <div class="example-info">
-                            <h2 class="example-title">Издание Limited Edition</h2>
-                            <p class="project-type">Дизайн</p>
-                        </div>
+                        <a class="example-card-link" href="">
+                            <img class="example-photo" src="./images/portfolio/example8.jpg" width="370"
+                                alt="Бирка Lab el tag">
+                            <div class="example-info">
+                                <h2 class="example-title">Проект LAB</h2>
+                                <p class="project-type">Маркетинг</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="example-card">
-                        <img class="example-photo" src="./images/portfolio/example8.jpg" width="370"
-                            alt="Бирка Lab el tag">
-                        <div class="example-info">
-                            <h2 class="example-title">Проект LAB</h2>
-                            <p class="project-type">Маркетинг</p>
-                        </div>
-                    </li>
-                    <li class="example-card">
-                        <img class="example-photo" src="./images/portfolio/example9.jpg" width="370"
-                            alt="ноутбук с изображением главной страницы сайта Growing Business">
-                        <div class="example-info">
-                            <h2 class="example-title">Growing Business</h2>
-                            <p class="project-type">Приложение</p>
-                        </div>
+                        <a class="example-card-link" href="">
+                            <img class="example-photo" src="./images/portfolio/example9.jpg" width="370"
+                                alt="ноутбук с изображением главной страницы сайта Growing Business">
+                            <div class="example-info">
+                                <h2 class="example-title">Growing Business</h2>
+                                <p class="project-type">Приложение</p>
+                            </div>
+                        </a>
                     </li>
                 </ul>
             </div>
